--- a/src/app/activity-form/activity-form.component.html
+++ b/src/app/activity-form/activity-form.component.html
@@ -1,39 +1,68 @@
-<div class="example-container">
-    <div class="form-container">
-      <form [formGroup]="actform" (ngSubmit)="submit($event)">
-        <mat-form-field class="form-field">
-            <mat-label> E-mail
-            </mat-label>
-          <span><input matInput formControlName="email" required></span>
-          <mat-error *ngIf="actform.invalid">
-            <span>This field is mandatory.</span>
+<div>
+  <h1>User Details</h1>
+  <form [formGroup]="userDetailsForm">
+    <div fxLayout="row">
+      <div fxFlexOffset="10" fxFlex="70">
+        <mat-form-field class="example-full-width">
+          <mat-label>User Name</mat-label>
+          <input formControlName='username' matInput placeholder="User Name">
+          <mat-error *ngIf="userDetailsForm.controls.username?.errors && userDetailsForm.controls.username?.touched">
+            Please enter a valid username
           </mat-error>
         </mat-form-field>
-        <mat-form-field class="form-field">
-          <mat-label> Password
-          </mat-label>
-          <input matInput formControlName="password" type="password">
-          <mat-error *ngIf="actform.invalid">
-            <span >This field is mandatory.</span>
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-            <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>   
-          <mat-label>Tipo</mat-label>
 
-          <mat-form-field appearance="fill">
-            <select matNativeControl required>
-              <option value="outside">Excursión</option>
-              <option value="saab">Saab</option>
-              <option value="mercedes">Mercedes</option>
-              <option value="audi">Audi</option>
-            </select>
-          </mat-form-field>       
-        <button mat-raised-button color="primary" type="submit" [disabled]="actform.invalid">Log In</button>
-      </form>
+      </div>
     </div>
+    <div fxLayout="row">
+      <div fxFlexOffset="10" fxFlex="70">
+        <mat-form-field class="example-full-width">
+          <mat-label>Email</mat-label>
+          <input formControlName="email" matInput placeholder="Email">
+          <mat-error *ngIf="userDetailsForm.controls.email?.errors && userDetailsForm.controls.email?.touched">
+            Please enter a valid Email Address
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+    <div fxLayout="row">
+      <div fxFlexOffset="10" fxFlex="70">
+        <mat-form-field class="example-full-width">
+          <mat-label>Password</mat-label>
+          <input formControlName="password" matInput placeholder="Password" type="password">
+          <mat-error *ngIf="userDetailsForm.controls.password?.errors && userDetailsForm.controls.password?.touched">
+            Please enter a valid Password
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+    <div fxLayout="row">
+      <div fxFlexOffset="10" fxFlex="70">
+        <mat-form-field class="example-full-width">
+          <mat-label>Age</mat-label>
+          <input formControlName="age" matInput placeholder="Age">
+          <mat-error *ngIf="userDetailsForm.controls.age?.errors && userDetailsForm.controls.age?.touched">
+            Please enter a valid Age
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+    <div fxLayout="row">
+      <div fxFlexOffset="10" fxFlex="70">
+        <mat-form-field class="example-full-width">
+          <mat-label>Select a Date</mat-label>
+          <input formControlName="date" matInput [matDatepicker]="picker">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <mat-error *ngIf="userDetailsForm.controls.date?.errors">
+            Please enter a valid date
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
+</div>
+<div fxLayout="row">
+  <div fxFlexOffset="10" fxFlex="70" fxLayoutAlign="end">
+    <button color="accent" mat-raised-button (click)="submit()">Save</button>
   </div>
+</div>
