Added range input date picker

--- a/src/app/activity-form/activity-form.component.html
+++ b/src/app/activity-form/activity-form.component.html
@@ -1,11 +1,12 @@
 <div>
-  <h1>User Details</h1>
+  <h1>Practice</h1>
+  <div class = container>
   <form [formGroup]="userDetailsForm">
-    <div fxLayout="row">
-      <div fxFlexOffset="10" fxFlex="70">
+    <div>
+      <div>
         <mat-form-field class="example-full-width">
           <mat-label>User Name</mat-label>
-          <input formControlName='username' matInput placeholder="User Name">
+          <input formControlName='username' matInput>
           <mat-error *ngIf="userDetailsForm.controls.username?.errors && userDetailsForm.controls.username?.touched">
             Please enter a valid username
           </mat-error>
@@ -13,56 +14,60 @@
 
       </div>
     </div>
-    <div fxLayout="row">
-      <div fxFlexOffset="10" fxFlex="70">
+    <div>
+      <div >
         <mat-form-field class="example-full-width">
           <mat-label>Email</mat-label>
-          <input formControlName="email" matInput placeholder="Email">
+          <input formControlName="email" matInput >
           <mat-error *ngIf="userDetailsForm.controls.email?.errors && userDetailsForm.controls.email?.touched">
             Please enter a valid Email Address
           </mat-error>
         </mat-form-field>
       </div>
     </div>
-    <div fxLayout="row">
-      <div fxFlexOffset="10" fxFlex="70">
+    <div>
+      <div >
         <mat-form-field class="example-full-width">
           <mat-label>Password</mat-label>
-          <input formControlName="password" matInput placeholder="Password" type="password">
+          <input formControlName="password" matInput  type="password">
           <mat-error *ngIf="userDetailsForm.controls.password?.errors && userDetailsForm.controls.password?.touched">
             Please enter a valid Password
           </mat-error>
         </mat-form-field>
       </div>
     </div>
-    <div fxLayout="row">
-      <div fxFlexOffset="10" fxFlex="70">
+    <div>
+      <div >
         <mat-form-field class="example-full-width">
           <mat-label>Age</mat-label>
-          <input formControlName="age" matInput placeholder="Age">
+          <input formControlName="age" matInput >
           <mat-error *ngIf="userDetailsForm.controls.age?.errors && userDetailsForm.controls.age?.touched">
             Please enter a valid Age
           </mat-error>
         </mat-form-field>
       </div>
     </div>
-    <div fxLayout="row">
-      <div fxFlexOffset="10" fxFlex="70">
-        <mat-form-field class="example-full-width">
-          <mat-label>Select a Date</mat-label>
-          <input formControlName="date" matInput [matDatepicker]="picker">
+    <div>
+
+      <div>
+        <mat-form-field appearance="fill">
+          <mat-label>Enter a date range</mat-label>
+          <mat-date-range-input [rangePicker]="picker">
+            <input matStartDate placeholder="Start date">
+            <input matEndDate placeholder="End date">
+          </mat-date-range-input>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-          <mat-error *ngIf="userDetailsForm.controls.date?.errors">
-            Please enter a valid date
-          </mat-error>
+          <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
+        
       </div>
     </div>
   </form>
 </div>
-<div fxLayout="row">
-  <div fxFlexOffset="10" fxFlex="70" fxLayoutAlign="end">
+<div>
+  <div class="save-button">
     <button color="accent" mat-raised-button (click)="submit()">Save</button>
   </div>
 </div>
+</div>
+
